--- a/NodeFolio/nodeFolio/package.json
+++ b/NodeFolio/nodeFolio/package.json
@@ -4,26 +4,27 @@
         "description": "This is a personal portfolio written in Node.js",
         "main": "app.js",
         "scripts": {
-          "test": "echo \"Error: no test specified\" && exit 1"
+                "test": "echo \"Error: no test specified\" && exit 1"
         },
         "repository": {
-          "type": "git",
-          "url": "git+https://github.com/theakbk/Thea-Node-JS.git"
+                "type": "git",
+                "url": "git+https://github.com/theakbk/Thea-Node-JS.git"
         },
         "keywords": [
-          "portfolio",
-          "personal",
-          "website",
-          "kea"
+                "portfolio",
+                "personal",
+                "website",
+                "kea"
         ],
         "author": "Thea Kampmann",
         "license": "MIT",
         "bugs": {
-          "url": "https://github.com/theakbk/Thea-Node-JS/issues"
+                "url": "https://github.com/theakbk/Thea-Node-JS/issues"
         },
         "homepage": "https://github.com/theakbk/Thea-Node-JS",
         "dependencies": {
-          "express": "^4.17.1"
+                "dotenv": "^8.5.1",
+                "express": "^4.17.1",
+                "nodemailer": "^6.5.0"
         }
-      
 }
